# i3_scripts

./: README.md  flake.nix  pyproject.toml  toggle-displays  toggle-touchpad
i3_focus/: focus_app.py  focus_current_app_window.py  focus_last.py  focus_next.py  focus_window.py  history_server.py
